env-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-pod-1
  labels:
    type: env
spec:
  containers:
    - name: env-nginx-container
      image: nginx
      command: ["env"]
