readiness1.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: readiness-pod
spec:
  containers:
    - image: redis
      name: redis-container
      readinessProbe:
        exec:
          command:
            - ls
        initialDelaySeconds: 10
        periodSeconds: 5
