testpod-annotations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: annotate-pod
  labels:
    type: example
  annotations:
    buildversion: v1.1
spec:
  containers:
    - name: nginx
      image: nginx
