testpod-initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-pod
spec:
  containers:
    - name: main-container
      image: redis
