testpod-nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodeselect-pod
spec:
  containers:
    - name: redis
      image: redis
  nodeSelector:
    size: Large      # Nodes with label size=Large will be selected
