testpod-resreqlim.yaml
apiVersion: v1
kind: Pod
metadata:
  name: res-pod
spec:
  containers:
    - image: redis
      name: redis-container
      ports:
        - containerPort: 8080
      resources:
        requests:
          memory: "1Gi"
          cpu: 1
        limits:
          memory: "2Gi"
          cpu: 2
