testpod-secret.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: secret-pod
spec:
  containers:
    - name: nginx-secret
      image: nginx
