testpod-serviceaccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-pod
spec:
  containers:
    - name: redis-container
      image: redis
  serviceAccountName: newsa
