testpod-volume-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: number-generator
spec:
  containers:
    - image: alpine
      name: alpine
      command: ["/bin/sh","-c"]
      args: ["shuf -i 0-50 -n 1 >> /opt/number.out;"]
      volumeMounts:
        - mountPath: /opt
          name: data-volume
  
  volumes:
    - name: data-volume
      hostPath:
        path: /data
        type: Directory
