testpod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod-1
  labels:
    type: front-end
    app: myapp
spec:
  containers:
    - name: nginx-container-1
      image: nginx
      ports:
        - containerPort: 80
