testpod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: clusterip-pod
  labels:
    type: backend
spec:
  containers:
    - image: nginx
      name: nginx-container
