clusterip-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    type: backend
