nodeport-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30100
  selector:
    app: myapp
    type: front-end
