ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  rules:
    - host: www.domain.name.com
      http:
        paths:
          - pathType: Prefix 
            path: "/wear"
            backend:
              service:
                name: wearservice
                port: 
                  number: 80
          - pathType: Prefix
            path: "/watch"
            backend:
              service:
                name: watch-service
                port:
                  number: 80
